fixed active tab does not show & added related stylings as proper spacing, scrolling for overflowing, and tab icons

--- a/renderer/assets/newStyles.css
+++ b/renderer/assets/newStyles.css
@@ -81,7 +81,7 @@
   color: #519aba;
 }
 /* common rule for '.seti-' */
-[class^="seti-"]:before {
+[class*="seti-"]:before {
   float: left;
   font-family: 'seti';
   -webkit-font-smoothing: antialiased;
